# RefuelWallet

./: .gitignore  README.md
nonce/: README.md
predicate/: Cargo.toml  Forc.toml  README.md  fuel-toolchain.toml
predicate/refuel-predicate/: Forc.toml
predicate/refuel-predicate/src/: address_utils.sw  refuel_predicate.sw  rlp_utils.sw  transaction_utils.sw
predicate/refuel-test/: Cargo.toml  Forc.toml
predicate/refuel-test/src/: refuel_test.sw
predicate/refuel-test/tests/: harness.rs
predicate/refuel-test/tests/utils/: builder.rs  evm.rs  fuel.rs
rpc/: README.md  package-lock.json  package.json
rpc/src/: config.js  endpoints.js  fuel.js  predicate.js  server.js  translator.js
rpc/test/: test.js
