[package]
name = "refuel-test"
version = "0.1.0"
authors = ["Fuel Labs <contact@fuel.sh>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
ethers = { version = "2.0", features = ["rustls"] }
fuel-core-interfaces = "0.15.3"
fuels = { version = "0.41", features = ["fuel-core-lib"] }
tokio = { version = "1.12", features = ["rt", "macros"] }

[[test]]
harness = true
name = "integration_tests"
path = "tests/harness.rs"
